--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A starter kit for chrome extensions.",
   "main": "index.js",
   "scripts": {
-    "start": "enclave",
+    "start": "nodemon --watch src --exec npm run enclave-serve",
+    "enclave-serve": "enclave",
     "enclave-build": "node node_modules/enclave/src/build.js",
     "enclave-eject": "node node_modules/enclave/src/eject/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
